Fixed Z-indexing of buttons

--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   max-width: 150px;
-  z-index: 9999;
+  z-index: 10;
 }
 
 #content-links-btn {
